--- a/index.html
+++ b/index.html
@@ -1,69 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Calculator</title>
-  <style>
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    #calculator {
-      text-align: center;
-    }
-    input {
-      width: 50px;
-      margin: 5px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calculadora de Salario</title>
 </head>
 <body>
 
-<div id="calculator">
-  <h2>Simple Calculator</h2>
-  <input type="text" id="display" disabled>
-  <br>
-  <button onclick="appendToDisplay('1')">1</button>
-  <button onclick="appendToDisplay('2')">2</button>
-  <button onclick="appendToDisplay('3')">3</button>
-  <button onclick="appendToDisplay('+')">+</button>
-  <br>
-  <button onclick="appendToDisplay('4')">4</button>
-  <button onclick="appendToDisplay('5')">5</button>
-  <button onclick="appendToDisplay('6')">6</button>
-  <button onclick="appendToDisplay('-')">-</button>
-  <br>
-  <button onclick="appendToDisplay('7')">7</button>
-  <button onclick="appendToDisplay('8')">8</button>
-  <button onclick="appendToDisplay('9')">9</button>
-  <button onclick="appendToDisplay('*')">*</button>
-  <br>
-  <button onclick="appendToDisplay('0')">0</button>
-  <button onclick="clearDisplay()">C</button>
-  <button onclick="calculateResult()">=</button>
-  <button onclick="appendToDisplay('/')">/</button>
-</div>
-
 <script>
-  function appendToDisplay(value) {
-    document.getElementById('display').value += value;
-  }
+    function calcularSalario() {
+        var h = parseFloat(prompt("Ingrese las horas trabajadas:"));
+        var s = parseFloat(prompt("Ingrese el salario por hora en COP:"));
+        var tsp = parseFloat(prompt("Ingrese la tasa de retención de Salud en %:"));
+        var tlp = parseFloat(prompt("Ingrese la tasa de riesgo laboral en %:"));
 
-  function clearDisplay() {
-    document.getElementById('display').value = '';
-  }
+        var tt = tsp + tlp;
+        var ts = tsp * 0.01;
+        var tl = tlp * 0.01;
 
-  function calculateResult() {
-    try {
-      document.getElementById('display').value = eval(document.getElementById('display').value);
-    } catch (error) {
-      document.getElementById('display').value = 'Error';
+        var rs = s * ts;
+        var rt = s * tl;
+        var dt = rt + rs;
+        var pn = s - dt;
+
+        alert("Horas trabajadas: " + h + "\nTarifa de pago: " + tt + "%\nSalario bruto: " + s +
+            "\n\nLa retención de salud es de " + rs + ".\nLa reducción laboral es de " + rt +
+            ".\nEl valor deducido es " + dt + " pesos.\nEl pago neto, entonces, es de " + pn + " pesos.");
     }
-  }
+
+    // Llamamos a la función al cargar la página
+    calcularSalario();
 </script>
 
 </body>
